media-tools/radarr/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        name: radarr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      priorityClassName: medium-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add:
            - "CHOWN"
            - "SETGID"
            - "SETUID"
            - "DAC_OVERRIDE"
        resources:
          requests:
            cpu: 10m
            memory: 500Mi
          limits:
            cpu: 700m
            memory: 700Mi
        livenessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: media
          mountPath: /media
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: longhorn-radarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
      automountServiceAccountToken: false
