media-tools/radarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "radarr.ucdialplans.com"
  rules:
  - backendRefs:
    - name: radarr-service
      namespace: media-tools
      kind: Service
      port: 7878
