media-tools/radarr/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: media-tools
spec:
  endpointSelector:
    matchLabels:
      app: radarr
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "7878"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "7878"
    - fromEndpoints:
        - matchLabels:
            app: overseerr
      toPorts:
        - ports:
            - port: "7878"
    - fromEndpoints:
        - matchLabels:
            app: prowlarr
      toPorts:
        - ports:
            - port: "7878"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: nas01.ucdialplans.com
      toPorts:
        - ports:
            - port: "8000"
    - toEndpoints:
        - matchLabels:
            app: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEndpoints:
        - matchLabels:
            app: prowlarr
      toPorts:
        - ports:
            - port: "9696"
    - toEndpoints:
        - matchLabels:
            app: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app: transmission
      toPorts:
        - ports:
            - port: "9091"
